ParNew: SurvivorAlignmentInBytes greater then YoungPLABSize cause assert(obj != NULL || plab->words_remaining() < word_sz) failed: Else should have been able to allocate

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 8u40, 9
    • Component/s: hotspot
    • None
    • Environment:

      CMS or ParNew, SurvivorAlignmentInBytes >> YoungPLABSize

    • gc
    • b115

      When SurvivorAlignmentInBytes value greater then YoungPLABSize, following assertion fails when ParNew copying survived object from eden to survivor:

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/HUDSON/workspace/8-2-build-linux-amd64/jdk8u40/1614/hotspot/src/share/vm/gc_implementation/parNew/parNewGeneration.cpp:258), pid=12731, tid=139798762899200
      # assert(obj != NULL || plab->words_remaining() < word_sz) failed: Else should have been able to allocate
      #
      # JRE version: Java(TM) SE Runtime Environment (8.0_40-b08) (build 1.8.0_40-ea-fastdebug-b08)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (25.40-b12-fastdebug mixed mode linux-amd64 compressed oops)
      # Core dump written. Default location: /tmp/sa/core or core.12731
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.sun.com/bugreport/crash.jsp
      #

      --------------- T H R E A D ---------------

      Current thread (0x00007f2580026800): GCTaskThread [stack: 0x00007f256f8a4000,0x00007f256f9a5000] [id=12736]

      Stack: [0x00007f256f8a4000,0x00007f256f9a5000], sp=0x00007f256f9a2f20, free space=1019k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xfddbd2] VMError::report_and_die()+0x2d2
      V [libjvm.so+0x7211d4] report_vm_error(char const*, int, char const*, char const*)+0x84
      V [libjvm.so+0xd90838] ParScanThreadState::alloc_in_to_space_slow(unsigned long)+0x168
      V [libjvm.so+0xd97103] ParNewGeneration::copy_to_survivor_space_avoiding_promotion_undo(ParScanThreadState*, oop, unsigned long, markOopDesc*)+0x10e3
      V [libjvm.so+0x92a416] ParNewGeneration::copy_to_survivor_space(ParScanThreadState*, oop, unsigned long, markOopDesc*)+0xd6
      V [libjvm.so+0x92d87c] void ParScanClosure::do_oop_work<unsigned int>(unsigned int*, bool, bool)+0x1fc
      V [libjvm.so+0x91878b] InstanceKlass::oop_oop_iterate_nv(oop, ParScanWithoutBarrierClosure*)+0xab
      V [libjvm.so+0xd99deb] ParScanThreadState::trim_queues(int)+0x2eb
      V [libjvm.so+0xd9a1d8] ParEvacuateFollowersClosure::do_void()+0x68
      V [libjvm.so+0xd91c06] ParNewGenTask::work(unsigned int)+0x296
      V [libjvm.so+0x102a166] GangWorker::loop()+0x2b6
      V [libjvm.so+0xd6a798] java_start(Thread*)+0x108


        1. core.12731.zip
          3.30 MB
        2. hs_err_pid12731.log
          34 kB
        3. Test.java
          0.2 kB

            Assignee:
            Jon Masamitsu (Inactive)
            Reporter:
            Filipp Zhinkin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: